# feynman-engine

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  visualize.sh  visualize_d3.sh
.github/workflows/: mdbook.yml
book/: book.toml
book-ja/: book.toml
book-ja/src/: SUMMARY.md  introduction.md
book-ja/src/guide/: diagram-generation.md
book/src/: SUMMARY.md  introduction.md
book/src/getting-started/: installation.md  quick-start.md
book/src/guide/: diagram-generation.md  finding-tc.md  numerical.md  symbolic-expressions.md  wick-theorem.md
book/src/theory/: feynman-diagrams.md  (+3 more)
docs/: usage-ja.md
docs/plans/: 2026-03-07-feynman-diagram-visualization-design.md  2026-03-07-feynman-engine-design.md  2026-03-07-feynman-engine-implementation.md  2026-03-07-feynman-visualization-plan.md  2026-03-07-mdbook-documentation-design.md  2026-03-07-mdbook-documentation-plan.md  2026-03-07-readme-design.md  2026-03-07-readme-implementation.md
docs/test-reports/: test-feature-20260307-120000.md  test-feature-20260307-170000.md
examples/: ladder_resummation.rs  second_order_self_energy.rs
src/: FeynmanEngine.jl  lib.rs  main.rs
src/algebra/: mod.rs  operators.rs  wick.rs
src/diagrams/: classify.rs  generate.rs  graph.rs  mod.rs  rules.rs
src/models/: hubbard.rs  lattice.rs  mod.rs
src/numerical/: greens_function.rs  matsubara.rs  mod.rs
src/resummation/: bethe_salpeter.rs  channels.rs  mod.rs
src/symbolic/: expr.rs
src/visualization/: dot.rs  json.rs  mod.rs
tests/: test_integration.rs
vis/: template_dot_vertex.html  template_wavy.html
(+2 files in other folders)
