[package]
name = "feynman-engine"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
description = "A perturbation theory engine for the Hubbard model: Wick contractions, Feynman diagram generation, symbolic expressions, and ladder resummation for superconducting Tc"
license = "MIT"
repository = "https://github.com/shumpei/feynman-engine"
authors = ["Shumpei"]
keywords = ["physics", "hubbard-model", "feynman-diagrams", "perturbation-theory", "superconductivity"]
categories = ["science", "mathematics"]

[dependencies]
num-complex = "0.4"
rayon = "1.10"
itertools = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
approx = "0.5"
